# hello-teramind

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.MD
app/: database.py  main.py  models.py  schemas.py
app/models/: __init__.py  user.py
