[tool.poetry]
name = "teramind"
version = "0.1.0"
description = "teramind interview"
authors = ["Ezequiel Gresia <gresia.ezequiel@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
pydantic = "^2.0"
pytest-asyncio = "^0.23.0"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
